--- a/nashornPlay/.classpath
+++ b/nashornPlay/.classpath
@@ -90,8 +90,8 @@
 	<classpathentry kind="lib" path="/Users/ran/projects/play/framework/lib/xmlpull-1.1.3.1.jar"/>
 	<classpathentry kind="lib" path="/Users/ran/projects/play/framework/lib/xstream-1.4.7.jar"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/japid-0.9.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/japidplay-0.9.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/javaparser-1.0.8.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/japid-0.9.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/japidplay-0.9.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javaparser-1.0.8.jar"/>
 	<classpathentry kind="output" path="eclipse/classes"/>
 </classpath>
