added logic to coerce JSON string to JavaScript object.

--- a/jsPlay/conf/application.conf
+++ b/jsPlay/conf/application.conf
@@ -9,7 +9,7 @@ application.name=jsPlay
 application.mode=dev
 %prod.application.mode=prod
 
-jscontroller.coerce.args=true
+#jscontroller.coerce.args=true
 
 # Secret key
 # ~~~~~
